# demo-simulations

./: .gitignore  .pre-commit-config.yaml  0-request.payload.json  1-chat.completion.json  1-request.payload.json  2-ai.intermediate.request.json  2-request.response.json  3-ai.intermediate.response.json  4-ai.intermediate.request.json  4-ai.tool.selected.json  4-chat.completion.json  4-request.response.json  5-ai.intermediate.response.json  5-ai.tool.response.json  5-request.response.json  6-ai.final.response.json  6-ai.intermediate.request.json  7-ai.intermediate.response.json  8-ai.final.response.json  9-request.response.json  README.md  pyproject.toml
.github/workflows/: autoblocks-replays-cleanup.yml  autoblocks-replays.yml  autoblocks-simulations.yml  ci.yml
demo_app/: app.py  bot.py  settings.py  simulations.py
demo_replays/: app.py  autoblocks_sdk.py  bot.py  replay.py  settings.py
tests/: conftest.py  test_bot.py
