[tool.poetry]
name = "demo-simulations"
version = "0.1.0"
description = ""
authors = ["Autoblocks Engineering <engineering@autoblocks.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "demo_app"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^2.3.2"
pydantic-settings = "^2.0.2"
simpleaichat = "^0.2.2"
autoblocksai = "0.0.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
select = ["E", "F", "I001"]
line-length = 120

[tool.ruff.isort]
force-single-line = true
known-first-party = ["demo_app"]

[tool.poetry.scripts]
start = "demo_app.app:start"
simulation-production-replay = "demo_app.simulations:production_replay"
